Add TV series search endpoint and improve chatbot search
Introduced /search/tv endpoint in MediaController for TV series search. Enhanced ChatbotService to support search queries for movies, TV, and multi-type, including filtering and improved result formatting. Updated OpenAIService prompt to clarify search behavior and provide more detailed examples for search requests.